# MyPenlearn

./: .gitignore  README.md
desktop/: Cargo.toml  penlearn-local.desktop  penligent-local.desktop  tauri.conf.json
desktop/capabilities/: default.json
desktop/scripts/: post-install.sh  pre-remove.sh
desktop/src/: claude_proc.rs  db_commands.rs  lib.rs  main.rs  vpn.rs
desktop/ui/: index.html  package-lock.json  package.json  vite.config.js
desktop/ui/src/: App.svelte
desktop/ui/src/lib/: ApprovalModal.svelte  CommandPalette.svelte  Findings.svelte  NextSteps.svelte  Replay.svelte  Settings.svelte  ShortcutHelp.svelte  Sidebar.svelte  StatusBar.svelte  Workspace.svelte
desktop/ui/src/routes/: Chat.svelte
mcp-server/: pyproject.toml
mcp-server/penlearn_mcp/: __main__.py  db.py
mcp-server/penlearn_mcp/data/methodology/: arcane-cve-chain.md  auth-session-testing.md  broken-access-control.md  cloud-attack-surface.md  compliance-mappings.md  detection-blind-spots.md  docker-group-privesc.md  document-parser-exploits.md  evidence-first.md  jwt-forgery.md  llm-attack-surface.md  osint-pre-engagement.md  (+5 more)
mcp-server/penlearn_mcp/tools/: _cache.py  _helpers.py  binary.py  cloud.py  crypto.py  execute.py  exploit.py  findings.py  guardrails.py  htb_machines.py  osint.py  plan.py  post_exploit.py  report.py  scanner.py  utils.py  web.py  wiki.py  workspace.py
mcp-server/penligent_mcp/: __main__.py  db.py
mcp-server/penligent_mcp/tools/: _cache.py  _helpers.py  binary.py  cloud.py  crypto.py  execute.py  exploit.py  findings.py  guardrails.py  htb_machines.py  network.py  osint.py  passwords.py  post_exploit.py  recon.py  register_all.py  report.py  scanner.py  utils.py  web.py  wiki.py  workspace.py
mcp-server/tests/: test_mcp_tools.py
(+15 files in other folders)
