[package]
name = "penligent-local"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "penligent_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"
