[project]
name = "penlearn-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.scripts]
penlearn-mcp = "penlearn_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["penlearn_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
